# vala-library-template

./: README.md  meson.build  meson_options.txt  setup-space.sh  test-template.sh
.github/workflows/: CI.yml
build-aux/flatpak/: <<APP-ID>>-Devel.json
data/: <<APP-ID>>.gresource.xml  <<APP-ID>>.metainfo.xml.in  meson.build
data/icons/: meson.build
data/ui/: window.blp
doc/: meson.build
lib/: main.vala  meson.build
po/: update_potfiles.sh
