scalable_dir = 'hicolor' / 'scalable' / 'apps'

install_data(
  scalable_dir / app_id_dyn + '.svg',
  install_dir: get_option('datadir') / 'icons' / scalable_dir
)

symbolic_dir = 'hicolor' / 'symbolic' / 'apps'

install_data(
  symbolic_dir / app_id_dyn + '-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / symbolic_dir
)
